--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="row">
-        <h1 class="text-center" style="text-align: center;">YTZ COMO ES LA JUGADA PE </h1>
+        <h1 class="text-center" style="text-align: center;">YTZ COMO ES LA JUGADA PEE </h1>
     </div>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
