--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="row">
-        <h1 class="text-center" style="text-align: center;">YTZ COMO ES LA JUGADA PEE </h1>
+        <h1 class="text-center" style="text-align: center;">YTZ COMO ES LA JUGADA</h1>
     </div>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
@@ -19,7 +19,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 <script src="js/main.js"charset="utf-8"> </script>
-
-        <div id="apiData"></div>
+<div id="apiData"></div>
 </body>
 </html>
